CHANGELOG

Future Version
=======


0.7.0
=======
-Better no git repo exception (Issue #27)

0.6.0
=======
-Breaking: FlexVersion object property 'tag' renamed to 'isTag'
-Breaking: Since symlink support was added (jgit is fun), this will no longer work with Java 6

0.5.0
=======
-Breaking: printVersion task not automatically applied. Use addPrintVersionTask() to do so
-Breaking: 'fullVersion' property from FlexVersion object is gone
-Vagrantfile for building
-Testing added.  Only doesn't test global override environment variable

0.4.0
=======
-Breaking: FlexVersion object now returned instead of string.
    * If the return value of flexVersion() is used somewhere expecting a string, call toString()
    * This gives the user the ability to pull pieces out of the version string without parsing it manually
-Possible breaking: All domains (no matter how determined) will have / converted to -

0.3.0
=======
-Custom environment variables (useful for build systems and environments where the workspace is in a detached head)
-Option to enforce a pattern for a domain

0.2.0
=======
-Initial release of flexversion