@@ -2,7 +2,8 @@ CHANGELOG
 
 Future Version
 =======
-
+-Breaking (Possibly): Changed the commit count logic to use null as the end commit. This should give a better count
+    * Older built versions' count # in a non tag version may be different now
 
 0.7.0
 =======
